--- a/checkout1custom.css
+++ b/checkout1custom.css
@@ -15,3 +15,10 @@
     background-color: #69036B  !important;
     border-color: #69036B  !important;
 }
+
+.thumbnail{
+    
+    border-radius: 4px !important;  /* Rounded border */
+    padding: 5px !important; /* Some padding */
+    width: 60px !important; /* Set a small width */
+  }
